--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -23,7 +23,7 @@ body {
 }
 
 .header h2 {
-    font-size: 1.8em;
+    font-size: 1.3em;
     color: #FFC107;
 }
 
@@ -160,7 +160,7 @@ body {
 }
 
 .footer {
-    margin: 0 0 10px 0;
+    margin: 30px 0px;
     text-align: center;
 }
 
@@ -177,12 +177,11 @@ body {
 
 .cta {
     margin: 0;
+    max-width: 400px;
     display: grid;
     grid-template-columns: 1fr auto;
     align-items: center;
     gap: 15px;
-    padding-top: 10px;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .cta span {
@@ -212,6 +211,8 @@ body {
 
 .bottom-wrapper {
     position: fixed;
+    display: flex;
+    justify-content: center;
     bottom: 0;
     left: 0;
     right: 0;
@@ -220,4 +221,8 @@ body {
     padding: 15px;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
     z-index: 1000;
+}
+
+#selected-plan{
+    min-width: 300px;
 }
